--- a/themes/custom/fitpreg/src/sass/components/_popup-ajax-week-menu.scss
+++ b/themes/custom/fitpreg/src/sass/components/_popup-ajax-week-menu.scss
@@ -1,4 +1,5 @@
 .week-menu-ajax-page {
+  padding: 2%;
   background: lightgrey;
   position: absolute;
   left: 0;
@@ -6,39 +7,54 @@
   z-index: 100;
   .all-rows {
     display: flex;
-    .views-row:first-child {
+    & > .views-row:first-child {
+      display: flex;
       flex: 2;
-      .views-field-field-img {
-        float: left;
-      }
-      .views-field-view-node {
-        a {
-          margin-top: 2rem;
-          display: inline-block;
-          font-weight: 700;
-          font-size: 13px;
-          line-height: 18px;
-          padding: 10px 20px;
-          text-decoration: none;
-          border: 1px solid #000;
-          text-transform: uppercase;
-          border-radius: 0;
-          -webkit-appearance: none;
-          color: #000;
-          background: #fff;
-          &:hover {
-            text-decoration: none;
-            border-color: #ec188c;
-            color: #ec188c;
+      .left-col-menu-ajax {
+        margin-right: 30px;
+        flex: 3;
+        .views-field-field-img {
+          float: left;
+          img {
+            width: 100%;
+            height: 330px;
           }
         }
+      }
+      .right-col-menu-ajax {
+        flex: 4;
+        .views-row {
+          margin-top: 0;
+        }
+        .views-field-view-node {
+          a {
+            margin-top: 2rem;
+            display: inline-block;
+            font-weight: 700;
+            font-size: 13px;
+            line-height: 18px;
+            padding: 10px 20px;
+            text-decoration: none;
+            border: 1px solid #000;
+            text-transform: uppercase;
+            border-radius: 0;
+            -webkit-appearance: none;
+            color: #000;
+            background: #fff;
+            &:hover {
+              text-decoration: none;
+              border-color: #ec188c;
+              color: #ec188c;
+            }
+          }
+        }
+
       }
     }
     .attachment-after {
       flex: 1;
       .six-box-ajax {
-        display: flex;
-        .all-rows {
+        .view-content {
           display: flex;
           flex-wrap: wrap;
           .views-row {
@@ -46,14 +62,13 @@
             margin-top: 25px;
             margin-left: 5%;
             img {
-              width: 100%!important;
-              height: auto!important;
-              padding-top: 0!important;
+              width: 100px;
+              height: 150px;
+              padding-top: 0;
             }
           }
         }
       }
     }
   }
-
 }
