--- a/themes/custom/fitpreg/src/sass/components/_popup-ajax-week-menu.scss
+++ b/themes/custom/fitpreg/src/sass/components/_popup-ajax-week-menu.scss
@@ -1,6 +1,6 @@
 .week-menu-ajax-page {
   padding: 2%;
-  background: lightgrey;
+  background: #fff;
   position: absolute;
   left: 0;
   top: 100%;
@@ -65,6 +65,15 @@
               width: 100px;
               height: 150px;
               padding-top: 0;
+            }
+            a {
+              text-decoration: none;
+              font-weight: 400;
+              font-size: 13px;
+              margin-top: .35rem;
+              line-height: 1.3;
+              cursor: pointer;
+              color: #aa0e63;
             }
           }
         }
