Disable block 'logo' and add block site-branding. Swich style to another selector.

--- a/themes/custom/fitpreg/src/sass/components/_header.scss
+++ b/themes/custom/fitpreg/src/sass/components/_header.scss
@@ -62,13 +62,13 @@ $transition-time: 200ms;
             @include fa('\f16d');
           }
         }
-
+ 
       }
     }
     /* end of Social menu */
 
     // Block for logo
-    #block-fitpreg-logo {
+    #block-sitebranding {
       background: url('../images/logo.png') no-repeat center;
       height: 50px;
       width: 304px;
