--- a/themes/custom/fitpreg/css/fitpreg.style.css
+++ b/themes/custom/fitpreg/css/fitpreg.style.css
@@ -2388,7 +2388,7 @@
       .region-header .firstline-blocks-wrapper #block-fitpreg-social-menu .field--name-body a:last-child::after {
         content: "";
         font-family: 'FontAwesome'; }
-    .region-header .firstline-blocks-wrapper #block-fitpreg-logo {
+    .region-header .firstline-blocks-wrapper #block-sitebranding {
       background: url("../images/logo.png") no-repeat center;
       height: 50px;
       width: 304px; }
@@ -3904,7 +3904,7 @@ footer {
 /* end of sixth region */
 .week-menu-ajax-page {
   padding: 2%;
-  background: lightgrey;
+  background: #fff;
   position: absolute;
   left: 0;
   top: 100%;
@@ -3974,6 +3974,14 @@ footer {
             width: 100px;
             height: 150px;
             padding-top: 0; }
+          .week-menu-ajax-page .all-rows .attachment-after .six-box-ajax .view-content .views-row a {
+            text-decoration: none;
+            font-weight: 400;
+            font-size: 13px;
+            margin-top: .35rem;
+            line-height: 1.3;
+            cursor: pointer;
+            color: #aa0e63; }
 
 body {
   color: #000;
