Fix: allow week-menu-ajax apearing on top instead of bottom.

--- a/themes/custom/fitpreg/css/fitpreg.style.css
+++ b/themes/custom/fitpreg/css/fitpreg.style.css
@@ -2749,6 +2749,7 @@ footer {
             text-decoration: none; }
 
 .menu--weekly-menu {
+  position: relative;
   border-color: #dedede;
   border-style: solid;
   border-width: 1px 0;
