--- a/themes/custom/fitpreg/src/sass/components/_period-block.scss
+++ b/themes/custom/fitpreg/src/sass/components/_period-block.scss
@@ -1,4 +1,5 @@
-.menu--weekly-menu {
+.menu--weekly-menu { // #block-weeklymenu
+  position: relative;
   border-color: $color-grey-light;
   border-style: solid;
   border-width: 1px 0;
