--- a/themes/custom/fitpreg/src/sass/fitpreg.style.scss
+++ b/themes/custom/fitpreg/src/sass/fitpreg.style.scss
@@ -9,6 +9,7 @@
 @import "components/slick-slider";
 @import "components/maincont";
 @import "components/popup-ajax-week-menu";
+@import "components/mosaic-layout";
 
 body {
   color: $color-black;
