--- a/themes/custom/fitpreg/css/fitpreg.style.css
+++ b/themes/custom/fitpreg/css/fitpreg.style.css
@@ -3988,7 +3988,7 @@ footer {
     height: auto;
     -webkit-box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.2);
             box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.2);
-    margin: 0 0 20px; }
+    margin: 20px 0; }
     .view-content-by-texonomy-term .view-content .views-row img {
       max-width: 100%;
       height: auto; }
