--- a/themes/custom/fitpreg/src/sass/components/_mosaic-layout.scss
+++ b/themes/custom/fitpreg/src/sass/components/_mosaic-layout.scss
@@ -5,7 +5,7 @@
       max-width: 300px;
       height: auto;
       box-shadow: 0 1px 2px 0 rgba(0,0,0,.2);
-      margin: 0 0 20px;
+      margin: 20px 0;
       img {
         max-width: 100%;
         height: auto;
