--- a/themes/custom/fitpreg/src/sass/components/_popup-ajax-week-menu.scss
+++ b/themes/custom/fitpreg/src/sass/components/_popup-ajax-week-menu.scss
@@ -63,7 +63,7 @@
             margin-left: 5%;
             img {
               width: 100px;
-              height: 150px;
+              height: auto;
               padding-top: 0;
             }
             a {
