--- a/themes/custom/fitpreg/src/sass/components/_period-block.scss
+++ b/themes/custom/fitpreg/src/sass/components/_period-block.scss
@@ -8,9 +8,9 @@
 
   .menu {
     margin: 10px 0;
-    padding: 0 2%;
+    padding: 0 3%;
     .slick-track {
-      display: inline-block;
+      display: flex;
       margin: 0;
       position: relative;
 
