--- a/themes/custom/fitpreg/src/sass/components/_slick-slider.scss
+++ b/themes/custom/fitpreg/src/sass/components/_slick-slider.scss
@@ -1,7 +1,9 @@
 /* Slick slider on the fornt page */
 
-$font-Flaticon-next: "\f100";
-$font-Flaticon-back: "\f101";
+$font-Flaticon-arrows-1: "\f100";
+$font-Flaticon-arrows: "\f101";
+$font-Flaticon-back: "\f102";
+$font-Flaticon-next: "\f103";
 
 .block-region-second {
 
@@ -69,28 +71,38 @@ $font-Flaticon-back: "\f101";
     }
   }
 }
-
 #block-weeklymenu .menu {
   .slick-prev,
   .slick-next {
     top: 45%;
     &:before {
-      font-family: 'FontAwesome';
-      font-size: 16px;
+      font-family: "Flaticon", serif;
+      font-size: 25px;
       color: #ec188c;
+      display: inline-block;
+      font-style: normal;
+      font-weight: normal;
+      font-variant: normal;
+      line-height: 1;
+      text-decoration: inherit;
+      text-rendering: optimizeLegibility;
+      text-transform: none;
+      -moz-osx-font-smoothing: grayscale;
+      -webkit-font-smoothing: antialiased;
+      font-smoothing: antialiased;
     }
   }
   .slick-prev {
-    left: -10px;
+    left: -7px;
     &:before {
-      content: $fa-var-arrow-left;
+      content: $font-Flaticon-arrows-1;
 
     }
   }
   .slick-next {
-    right: 0;
+    right: -3px;
     &:before {
-      content: $fa-var-arrow-right;
+      content: $font-Flaticon-arrows;
     }
   }
 }
