--- a/themes/custom/fitpreg/src/sass/fitpreg.style.scss
+++ b/themes/custom/fitpreg/src/sass/fitpreg.style.scss
@@ -10,6 +10,7 @@
 @import "components/maincont";
 @import "components/popup-ajax-week-menu";
 @import "components/mosaic-layout";
+@import "components/breadcrumbs";
 
 body {
   color: $color-black;
