--- a/themes/custom/fitpreg/css/fitpreg.style.css
+++ b/themes/custom/fitpreg/css/fitpreg.style.css
@@ -3964,6 +3964,86 @@ footer {
     text-transform: uppercase;
     color: #ec188c; }
 
+main {
+  max-width: 78.875rem;
+  margin: 0 auto; }
+  main .region-content {
+    width: 74.6%;
+    font-family: Montserrat,Arial,sans-serif; }
+    main .region-content .views-field-title {
+      font-size: 48px;
+      line-height: 52px;
+      margin: .5rem 0 0;
+      font-weight: 200; }
+    main .region-content .views-field-field-short-description {
+      font-size: 18px;
+      line-height: 26px;
+      max-height: none;
+      font-weight: 400;
+      margin: .5rem 0; }
+      main .region-content .views-field-field-short-description p {
+        margin-bottom: 0; }
+    main .region-content .views-field-uid {
+      margin: .5rem 0;
+      font-size: 13px;
+      line-height: 18px;
+      text-transform: uppercase;
+      font-weight: 700; }
+      main .region-content .views-field-uid a {
+        text-decoration: none;
+        color: #000; }
+    main .region-content .sharethis-wrapper {
+      padding-bottom: 15px;
+      border-bottom: 1px solid #dedede; }
+      main .region-content .sharethis-wrapper .st_plusone_button {
+        display: none; }
+      main .region-content .sharethis-wrapper .st_fblike_button {
+        display: none; }
+      main .region-content .sharethis-wrapper .stButton {
+        font-size: 0;
+        width: 28%;
+        max-width: 100px;
+        height: 44px;
+        text-align: center;
+        margin: 0; }
+        main .region-content .sharethis-wrapper .stButton .st-facebook-counter {
+          width: 100%;
+          height: 100% !important;
+          background: #3b5998;
+          background-image: url("../images/icons/facebook.png") !important;
+          background-repeat: no-repeat;
+          background-position: center;
+          background-size: 26px; }
+        main .region-content .sharethis-wrapper .stButton .st-pinterest-counter {
+          width: 100%;
+          height: 100% !important;
+          background: #cc2127;
+          background-image: url("../images/icons/pinterest.png") !important;
+          background-repeat: no-repeat;
+          background-position: center;
+          background-size: 26px; }
+        main .region-content .sharethis-wrapper .stButton .st-email-counter {
+          width: 100%;
+          height: 100% !important;
+          background: #3e3e3e;
+          background-image: url("../images/icons/email.png") !important;
+          background-repeat: no-repeat;
+          background-position: center;
+          background-size: 26px; }
+    main .region-content .views-field-field-paragraphs {
+      margin-top: 20px; }
+      main .region-content .views-field-field-paragraphs .field--type-image {
+        float: left;
+        margin: 0 16px 16px 0; }
+      main .region-content .views-field-field-paragraphs .field--type-text-long p {
+        margin: 1.25rem 0;
+        line-height: 1.5rem; }
+      main .region-content .views-field-field-paragraphs .field--type-text-long a {
+        margin: 1.25rem 0;
+        line-height: 1.5rem;
+        text-decoration: none;
+        color: #ec188c; }
+
 body {
   color: #000;
   font-family: 'Montserrat'; }
