--- a/themes/custom/fitpreg/src/sass/fitpreg.style.scss
+++ b/themes/custom/fitpreg/src/sass/fitpreg.style.scss
@@ -11,6 +11,7 @@
 @import "components/popup-ajax-week-menu";
 @import "components/mosaic-layout";
 @import "components/breadcrumbs";
+@import "components/node";
 
 body {
   color: $color-black;
