--- a/themes/custom/fitpreg/css/fitpreg.style.css
+++ b/themes/custom/fitpreg/css/fitpreg.style.css
@@ -3975,74 +3975,116 @@ main {
       line-height: 52px;
       margin: .5rem 0 0;
       font-weight: 200; }
-    main .region-content .views-field-field-short-description {
-      font-size: 18px;
-      line-height: 26px;
-      max-height: none;
-      font-weight: 400;
-      margin: .5rem 0; }
-      main .region-content .views-field-field-short-description p {
-        margin-bottom: 0; }
-    main .region-content .views-field-uid {
-      margin: .5rem 0;
-      font-size: 13px;
-      line-height: 18px;
-      text-transform: uppercase;
-      font-weight: 700; }
-      main .region-content .views-field-uid a {
-        text-decoration: none;
-        color: #000; }
-    main .region-content .sharethis-wrapper {
-      padding-bottom: 15px;
+    main .region-content .field__label {
+      display: none; }
+  main .views-field-field-short-description {
+    font-size: 18px;
+    line-height: 26px;
+    max-height: none;
+    font-weight: 400;
+    margin: .5rem 0; }
+    main .views-field-field-short-description p {
+      margin-bottom: 0; }
+  main .views-field-uid {
+    margin: .5rem 0;
+    font-size: 13px;
+    line-height: 18px;
+    text-transform: uppercase;
+    font-weight: 700; }
+    main .views-field-uid a {
+      text-decoration: none;
+      color: #000; }
+  main .sharethis-wrapper {
+    padding-bottom: 15px;
+    border-bottom: 1px solid #dedede; }
+    main .sharethis-wrapper .st_plusone_button {
+      display: none; }
+    main .sharethis-wrapper .st_fblike_button {
+      display: none; }
+    main .sharethis-wrapper .stButton {
+      font-size: 0;
+      width: 28%;
+      max-width: 100px;
+      height: 44px;
+      text-align: center;
+      margin: 0; }
+      main .sharethis-wrapper .stButton .st-facebook-counter {
+        width: 100%;
+        height: 100% !important;
+        background: #3b5998;
+        background-image: url("../images/icons/facebook.png") !important;
+        background-repeat: no-repeat;
+        background-position: center;
+        background-size: 26px; }
+      main .sharethis-wrapper .stButton .st-pinterest-counter {
+        width: 100%;
+        height: 100% !important;
+        background: #cc2127;
+        background-image: url("../images/icons/pinterest.png") !important;
+        background-repeat: no-repeat;
+        background-position: center;
+        background-size: 26px; }
+      main .sharethis-wrapper .stButton .st-email-counter {
+        width: 100%;
+        height: 100% !important;
+        background: #3e3e3e;
+        background-image: url("../images/icons/email.png") !important;
+        background-repeat: no-repeat;
+        background-position: center;
+        background-size: 26px; }
+  main .views-field-field-paragraphs {
+    margin-top: 20px; }
+    main .views-field-field-paragraphs .field--name-field-image-demo {
+      float: left;
+      margin: 0 16px 16px 0; }
+    main .views-field-field-paragraphs .field--type-text-long p {
+      margin: 1.25rem 0;
+      line-height: 1.5rem; }
+    main .views-field-field-paragraphs .field--type-text-long a {
+      margin: 1.25rem 0;
+      line-height: 1.5rem;
+      text-decoration: none;
+      color: #ec188c; }
+    main .views-field-field-paragraphs .paragraph--type--list {
       border-bottom: 1px solid #dedede; }
-      main .region-content .sharethis-wrapper .st_plusone_button {
-        display: none; }
-      main .region-content .sharethis-wrapper .st_fblike_button {
-        display: none; }
-      main .region-content .sharethis-wrapper .stButton {
-        font-size: 0;
-        width: 28%;
-        max-width: 100px;
-        height: 44px;
-        text-align: center;
-        margin: 0; }
-        main .region-content .sharethis-wrapper .stButton .st-facebook-counter {
-          width: 100%;
-          height: 100% !important;
-          background: #3b5998;
-          background-image: url("../images/icons/facebook.png") !important;
-          background-repeat: no-repeat;
-          background-position: center;
-          background-size: 26px; }
-        main .region-content .sharethis-wrapper .stButton .st-pinterest-counter {
-          width: 100%;
-          height: 100% !important;
-          background: #cc2127;
-          background-image: url("../images/icons/pinterest.png") !important;
-          background-repeat: no-repeat;
-          background-position: center;
-          background-size: 26px; }
-        main .region-content .sharethis-wrapper .stButton .st-email-counter {
-          width: 100%;
-          height: 100% !important;
-          background: #3e3e3e;
-          background-image: url("../images/icons/email.png") !important;
-          background-repeat: no-repeat;
-          background-position: center;
-          background-size: 26px; }
-    main .region-content .views-field-field-paragraphs {
-      margin-top: 20px; }
-      main .region-content .views-field-field-paragraphs .field--type-image {
+      main .views-field-field-paragraphs .paragraph--type--list .field--type-integer {
+        border: 1px solid #dedede;
+        width: 70px;
+        height: 70px;
+        border-radius: 50%;
+        margin-right: 20px;
+        float: left; }
+        main .views-field-field-paragraphs .paragraph--type--list .field--type-integer .field__item {
+          margin: 30% auto;
+          text-align: center;
+          font-size: 24px;
+          font-weight: 200; }
+      main .views-field-field-paragraphs .paragraph--type--list img {
         float: left;
         margin: 0 16px 16px 0; }
-      main .region-content .views-field-field-paragraphs .field--type-text-long p {
-        margin: 1.25rem 0;
-        line-height: 1.5rem; }
-      main .region-content .views-field-field-paragraphs .field--type-text-long a {
-        margin: 1.25rem 0;
-        line-height: 1.5rem;
-        text-decoration: none;
-        color: #ec188c; }
+      main .views-field-field-paragraphs .paragraph--type--list .field--name-field-description-link {
+        height: 20px; }
+      main .views-field-field-paragraphs .paragraph--type--list .field--name-field-body-link {
+        height: 20px; }
+    main .views-field-field-paragraphs .paragraph--type--content-image .field--name-field-title-left {
+      height: 20px; }
+      main .views-field-field-paragraphs .paragraph--type--content-image .field--name-field-title-left h2 {
+        font-size: 22px;
+        line-height: 26px;
+        font-weight: 200; }
+    main .views-field-field-paragraphs .paragraph--type--content-image .field--name-field-image-right {
+      float: right;
+      margin: 0 0 16px 16px; }
+    main .views-field-field-paragraphs .paragraph--type--content-image .field--name-field-body-left {
+      font-size: 14px;
+      line-height: 1.5rem;
+      font-weight: 400; }
+    main .views-field-field-paragraphs .paragraph--type--content-image .paragraph--type--text-image h3 {
+      font-weight: 700;
+      font-size: 24px;
+      line-height: 28px; }
+    main .views-field-field-paragraphs .field--name-field-video-paragraph iframe {
+      width: 100%; }
 
 body {
   color: #000;
